# appointment-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.eval_runs/20260416_172234/: results.json
.eval_runs/20260416_172759/: results.json
.eval_runs/20260416_174701/: results.json
.eval_runs/20260417_120707/: results.json
.eval_runs/20260417_121104/: results.json
.eval_runs/20260417_121410/: results.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: action_names.py  config.py  main.py  models.py  observability.py  repositories.py  responses.py  runtime.py  services.py
app/api/: routes.py  schemas.py
app/application/: chat_service.py  errors.py  session_service.py
app/domain/: actions.py  errors.py  models.py  parsing.py  policies.py  ports.py  services.py
app/evals/: intent_entity_loader.py  judge.py  models.py  runner.py
app/graph/: builder.py  nodes.py  normalize.py  parsing.py  routing.py  state.py  text_extraction.py  workflow.py
app/llm/: base.py  factory.py  openai_provider.py  prompt.py  provider.py  schemas.py
docs/: architecture.md  data-model.md  decisions.md  evaluation.md  graph.md  llm-boundary.md  observability.md  sdd.md  security.md  test-scenarios.md
frontend/: streamlit_app.py
scripts/: generate_graph_diagram.py
tests/: conftest.py  support.py
(+104 files in other folders)
