[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appointment-bot"
version = "0.1.0"
description = "Conversational appointment management service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=0.2.0,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0",
  "openai>=1.30,<2.0",
  "langfuse>=2.0,<3.0",
  "streamlit>=1.35,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
